# raven-schemas

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  README.md  modeling_input_versions.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: CI-python.yml  CI.yml
raven_schemas/: constants.py  main.py  modeling_input_1_0_0_test.py  modeling_input_1_0_1_test.py  modeling_input_1_1_0_test.py  modeling_input_1_1_1_test.py  modeling_input_1_1_2_test.py  modeling_input_1_1_3_test.py  modeling_input_1_1_4_test.py  modeling_input_1_1_5_test.py  modeling_input_1_1_6_test.py  modeling_input_1_2_0_test.py  modeling_input_2_0_0_test.py  schemas.py  schemas_test.py  types.py  validate.py  validate_test.py
raven_schemas/schemas/: modeling_input_0_0_0_sample.json  modeling_input_0_0_0_sample_valid.json  modeling_input_0_0_0_sample_valid_2.json  modeling_input_0_0_0_schema.json  modeling_input_1_0_0_sample.json  modeling_input_1_0_0_sample_invalid_missing_version.json  modeling_input_1_0_0_sample_valid.json  modeling_input_1_0_0_schema.json  modeling_input_1_0_1_sample_valid.json  modeling_input_1_0_1_schema.json  modeling_input_1_1_0_sample_invalid_missing_version.json  modeling_input_1_1_0_sample_valid.json  modeling_input_1_1_0_schema.json  modeling_input_1_1_1_sample_valid.json  modeling_input_1_1_1_schema.json  modeling_input_1_1_2_sample_invalid_missing_version.json  modeling_input_1_1_2_sample_valid.json  modeling_input_1_1_2_schema.json  modeling_input_1_1_3_sample_valid.json  modeling_input_1_1_3_schema.json  modeling_input_1_1_4_sample_invalid_missing_version.json  modeling_input_1_1_4_sample_valid.json  modeling_input_1_1_4_schema.json  modeling_input_1_1_5_sample_valid.json  modeling_input_1_1_5_schema.json  modeling_input_1_1_6_sample_invalid_missing_version.json  modeling_input_1_1_6_sample_valid.json  modeling_input_1_1_6_schema.json  (+5 more)
(+1 files in other folders)
