[tool.poetry]
name = "raven-schemas"
version = "0.3.1"
description = "Cross-repo relevant JSON schemas and language specific bindings for using them."
authors = ["Energy Raven"]
packages = [{ include = "raven_schemas" }]
include = [{ path = "schemas" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jsonschema = "^4.19.2"
click = "^8.1.7"

[tool.poetry.scripts]
raven-schemas = "raven_schemas.main:raven_schemas"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
types-jsonschema = "^4.19.0.4"
isort = "^5.12.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
flake8-bugbear = "^23.9.16"
mypy = "^1.7.0"
pytest-cov = "^4.1.0"
bump2version = "^1.0.1"

[tool.flake8]
extend-ignore = [
    "E203", # Whitespace before ":" - sometimes this is helpful, as in df.loc[a : b]
    "E501", # line too long: black will autofix this where possible
]

[tool.isort]
line_length = 88
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
check_untyped_defs = "True"
packages = "nrgx_building_model"

[tool.pytest.ini_options]
testpaths = ["nrgx_building_model"]
python_files = ["*_test.py"]
addopts = "--cov=raven_schemas"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
